Fixed github links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421481/Simon_vgore5.png" alt="Picture of Simon Game">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/simon-game" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="simon-game/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Simon Game</p>
                   <p>A Simon game where you copy whatever buttons the computer randomly plays. Each button has a unique sound and color. The computer starts by playing one button and everytime you play the correct button, the computer adds another random button to the series. You have the option of playing the game using Strict Mode, which resets the sequence of buttons completely if you press a wrong button, and you start from the beginning. This game goes upto 20 steps, and after getting all 20 steps correctly, you win!</p>
@@ -43,7 +43,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421427/Tic_tac_toe_nxur8m.png" alt="Picture of Tic Tac Toe">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/tic-tac-toe" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="tic-tac-toe/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Tic Tac Toe</p>
                   <p>A basic Tic-Tac-Toe game against the computer, where the computer never loses. The game automatically resets when it's over.</p>
@@ -56,7 +56,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421365/Pomodoro_ezbliv.png" alt="Picture of Pomodoro Clock">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/pomodoro-clock" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="pomodoro-clock/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Pomodoro Clock</p>
                   <p>A Pomodoro Clock is a time management technique used to maximize productivity. By default, a pomodoro consists of 25 minutes of work time, followed by 5 minutes of break time. This clock allows you to customize session time and break time, and lets you pause and reset the clock. Plays an alarm to let you know whenever a session time or break time is over.</p>
@@ -69,7 +69,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421272/calculator_chlq4g.png" alt="Picture of Calculator">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/calculator" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="calculator/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Calculator</p>
                   <p>Basic calculator that lets you add, subtract, multiply and divide two numbers. Allows you to chain operators, clear everything, and clear previous number.</p>
@@ -82,7 +82,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488420945/weather_bnnarv.png" alt="Picture of Local Weather">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/show-the-local-weather" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="show-the-local-weather/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Show the Local Weather</p>
                   <p>Displays the current weather using your current location with Open Weather API. Changes the background based on the weather, and allows you to toggle between Fahrenheit and Celsius.</p>
@@ -95,7 +95,7 @@
               <figure>
                 <img class="img-responsive center-block img-thumbnail center-block" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488420268/wiki_vy9hxj.png" alt="Picture of Wikipedia Viewer">
                 <figcaption>
-                  <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/wikipedia-viewer" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <a href="wikipedia-viewer/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Wikipedia Viewer</p>
                   <p>Searches Wikipedia using Wikipedia's API, and displays ten entries on the page. Also allows you to browse a random Wikipedia entry.</p>
