--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row welcome text-center">
         <h1>Dhaval Rughani</h1>
-        <h2>Front-End Developer</h2>
+        <h2>Web Developer</h2>
         <div>
         <a href = "mailto:dhavalrughani@hotmail.com"><i title="Email" class = "fa fa-envelope fa-fw fa-3x" aria-hidden="true"></i></a>
         <a href="https://github.com/DhavalRu" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -26,6 +26,43 @@
           <h2 class="text-center">Personal Projects</h2>
           <div class="row center-block centerimages">
             <!--First image-->
+            <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
+ 
+              <figure>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                  </ol>
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431488/Index_lf5jbe.png" alt="Index of CMS">
+                    </div>
+                    <div class="item">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431563/admin_pna6fb.png" alt="Admin of CMS">
+                    </div>
+                  </div>
+                  <!-- Left and right controls -->
+                  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div> 
+                <figcaption>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/cms" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <p class="figcaptionclass">CMS</p>
+                  <p>A Basic CMS that allows users to register, login, make posts and comments. Admins can create/delete posts and comments, as well as approve/unapprove comments, add categories, and change user's role to admin. Uses Google Charts API to display visual data about posts, comments, users, and categories. </p>
+                  <p class="techUsed">HTML5 | CSS3 | PHP | JavaScript | jQuery | Bootstrap </p>
+                </figcaption>
+              </figure>
+            </section>
+            <!--Second image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">   
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421481/Simon_vgore5.png" alt="Picture of Simon Game">
@@ -38,7 +75,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Second image-->
+            <!--Third image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421427/Tic_tac_toe_nxur8m.png" alt="Picture of Tic Tac Toe">
@@ -51,7 +88,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Third image-->
+            <!--Fourth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421365/Pomodoro_ezbliv.png" alt="Picture of Pomodoro Clock">
@@ -64,7 +101,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Fourth image-->
+            <!--Fifth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421272/calculator_chlq4g.png" alt="Picture of Calculator">
@@ -73,19 +110,6 @@
                   <a href="calculator/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">Calculator</p>
                   <p>Basic calculator that lets you add, subtract, multiply and divide two numbers. Allows you to chain operators, clear everything, and clear previous number.</p>
-                  <p class="techUsed">HTML5 | CSS3 | JavaScript | jQuery | Bootstrap | SASS</p>
-                </figcaption>
-              </figure>
-            </section>
-            <!--Fifth image-->
-            <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
-              <figure>
-                <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488420945/weather_bnnarv.png" alt="Picture of Local Weather">
-                <figcaption>
-                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/show-the-local-weather" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
-                  <a href="show-the-local-weather/index.html" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
-                  <p class="figcaptionclass">Show the Local Weather</p>
-                  <p>Displays the current weather using your current location with Open Weather API. Changes the background based on the weather, and allows you to toggle between Fahrenheit and Celsius.</p>
                   <p class="techUsed">HTML5 | CSS3 | JavaScript | jQuery | Bootstrap | SASS</p>
                 </figcaption>
               </figure>
