Updated portfolio again, forgot WP site

--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
                 </figcaption>
               </figure>
             </section>
+            <!--Seventh image-->
+            <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
+              <figure>
+                <img class="img-responsive center-block img-thumbnail center-block" src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500433419/apples_ahpfdx.png" alt="Picture of Apples website">
+                <figcaption>
+                  <a href="https://applesaredelicious.wordpress.com/" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <p class="figcaptionclass">Apples</p>
+                  <p>A WordPress website about Apples</p>
+                </figcaption>
+              </figure>
+            </section>
           </div>
           <p class='text-center'><i class = "fa fa-chevron-circle-up fa-3x" aria-hidden="true"></i></p>
         </section>
