--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <div class="row center-block centerimages">
             <!--First image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
- 
               <figure>
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -38,10 +37,10 @@
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner">
                     <div class="item active">
-                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431488/Index_lf5jbe.png" alt="Index of CMS">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1513566870/Recipe1_kjfk3z.png" alt="Recipe List Page">
                     </div>
                     <div class="item">
-                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431563/admin_pna6fb.png" alt="Admin of CMS">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1513566977/Recipe2_skxweb.png" alt="Shopping List Page">
                     </div>
                   </div>
                   <!-- Left and right controls -->
@@ -55,6 +54,57 @@
                   </a>
                 </div> 
                 <figcaption>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/shopping-recipe" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://ng-recipe-book-12187.firebaseapp.com" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <p class="figcaptionclass">Shopping Recipe</p>
+                  <p>A Recipe Book and Shopping List app that allows users to create, edit, delete, as well as save Recipes and Shopping items to
+                  the database. </p>
+                  <p class="techUsed">HTML5 | CSS3 | JavaScript | Angular | Bootstrap | Firebase </p>
+                </figcaption>
+              </figure>
+            </section>
+            <!--Second image-->
+            <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">   
+              <figure>
+                <img class="img-responsive center-block img-thumbnail" src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1513565958/randomQuote_yunawi.png" alt="Picture of Random Quote Machine">
+                <figcaption>
+                  <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/random-quote" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <a href="https://random-quote-65799.firebaseapp.com/" target="_blank"><i title="Play" class = "fa fa-play fa-fw fa-3x" aria-hidden="true"></i></a>
+                  <p class="figcaptionclass">Random Quote Machine</p>
+                  <p>A simple Angular app that allows you to read random quotes, as well as tweet them. Uses Twitter API and Talaikis API. </p>
+                  <p class="techUsed">HTML5 | CSS3 | JavaScript | Bootstrap | Angular </p>
+                </figcaption>
+              </figure>
+            </section>
+            <!--Third image-->
+            <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
+              <figure>
+                <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel2" data-slide-to="1"></li>
+                  </ol>
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431488/Index_lf5jbe.png" alt="Index of CMS">
+                    </div>
+                    <div class="item">
+                      <img src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500431563/admin_pna6fb.png" alt="Admin of CMS">
+                    </div>
+                  </div>
+                  <!-- Left and right controls -->
+                  <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel2" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div> 
+                <figcaption>
                   <a href="https://github.com/DhavalRu/DhavalRu.github.io/tree/master/cms" target="_blank"><i title="Github" class = "fa fa-github fa-fw fa-3x" aria-hidden="true"></i></a>
                   <p class="figcaptionclass">CMS</p>
                   <p>A Basic CMS that allows users to register, login, make posts and comments. Admins can create/delete posts and comments, as well as approve/unapprove comments, add categories, and change user's role to admin. Uses Google Charts API to display visual data about posts, comments, users, and categories. </p>
@@ -62,7 +112,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Second image-->
+            <!--Fourth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">   
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421481/Simon_vgore5.png" alt="Picture of Simon Game">
@@ -75,7 +125,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Third image-->
+            <!--Fifth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421427/Tic_tac_toe_nxur8m.png" alt="Picture of Tic Tac Toe">
@@ -88,7 +138,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Fourth image-->
+            <!--Sixth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421365/Pomodoro_ezbliv.png" alt="Picture of Pomodoro Clock">
@@ -101,7 +151,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Fifth image-->
+            <!--Seventh image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488421272/calculator_chlq4g.png" alt="Picture of Calculator">
@@ -114,7 +164,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Sixth image-->
+            <!--Eighth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail center-block" src="https://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1488420268/wiki_vy9hxj.png" alt="Picture of Wikipedia Viewer">
@@ -127,7 +177,7 @@
                 </figcaption>
               </figure>
             </section>
-            <!--Seventh image-->
+            <!--Ninth image-->
             <section class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
               <figure>
                 <img class="img-responsive center-block img-thumbnail center-block" src="http://res.cloudinary.com/prismaticdhaval/image/upload/c_scale,h_731,w_1572/v1500433419/apples_ahpfdx.png" alt="Picture of Apples website">
